# GameOfLifeApplication

./: .mainEjemplo.cpp.swp  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Game of life.pptx  Makefile  ProyectoQt.pro  README.md  cmake_install.cmake  compile_commands.json  game_of_life  Дневник.docx  Индивидуальное_задание.docx  Отчет.docx
headers/: ApplicationElements.h  ApplicationLogic.h  GameOfLife.h  Libs.h
src/: ApplicationElements.cpp  ApplicationLogic.cpp  GameOfLife.cpp  ProyectoQt  main.cpp  mainEjemplo.cpp
tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  game_of_life_tests.cpp  game_of_life_tests[1]_include.cmake
